# fiocruz-malaria-cells-detec

./: find_duplicate_images.py  main.py  pyproject.toml  resize_dataset.py  train_yolo.py
Malaria.v2-dataset_1_to_7_esquerdo/: README.dataset.txt  data.yaml
Malaria.v2-dataset_1_to_7_esquerdo.yolov12/: README.roboflow.txt
Malaria.v2-dataset_1_to_7_esquerdo.yolov12/test/labels/: L2683PF_2_jpg.rf.d952fe99276bc32b7c4d29e6f9a52f3f.txt  L36PF-14_jpg.rf.652f293afa915d9015b53eaf0cd273a1.txt  L3733PV2_jpg.rf.e702d29b3d8e430f5f782814971dcd27.txt  L508PV1_jpg.rf.a85ec20070efb4e3b57023d5dfec6040.txt
Malaria.v2-dataset_1_to_7_esquerdo.yolov12/train/labels/: L11PF_1_jpg.rf.800115b76b470f58b4c5b8fb04e4f4ce.txt  L11PV_1_jpg.rf.149cb01ecd54ff011a6e738eaa4ec7fa.txt  L21PV_1_jpg.rf.7267c52374a6657dd67fe781379acdda.txt  L2683PF_4_jpg.rf.9d0d1f762ad69a7230baeafe0b2d7cc7.txt  L29PF_2_jpg.rf.d82d2609bf14d24d432d0c7a580c3dc9.txt  L30PV_11_jpg.rf.17e8dd677e6b8f0956d7a64649b83b84.txt  L30PV_13_jpg.rf.47c5bcc753c1fc3e4531dd21c070d3c9.txt  L30PV_7_jpg.rf.9c74c19e54c0ffd55489aecaa0da7647.txt  L30PV_9_jpg.rf.a7d05fdc930866ce768b2cbfcfb70696.txt  L3320PF_4_jpg.rf.21621b99140ad094da47ba4508ebfb90.txt  L35PF_3_jpg.rf.64dfb60d4052564ff5ae03bf780a6597.txt  L35PF_8_jpg.rf.0ba1b6726b6268479cd4fa57b5241b3c.txt  L35PF_9_jpg.rf.d6f4961cb9afbca2b3795e58c13e855f.txt  L36PF-12_jpg.rf.c046b0ccfee776e30f911f5b81b00a86.txt  L36PF-2_jpg.rf.c1d61b39a9a1e0a5ba784ce03c8ef1ed.txt  L36PF-5_jpg.rf.87c496ab079a0f418b23faa7d8b10f51.txt  (+26 more)
datasets/: imagens_repetidas.txt
(+161 files in other folders)
